reformat some order files