@@ -74,7 +74,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.UUID;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -106,18 +105,14 @@ public class OrderProcessingService implements IOrderProcessingService {
 
     protected final IJobInfoService jobInfoService;
 
-    // @formatter:off
-
     @Autowired
-    public OrderProcessingService(
-            BasketSelectionPageSearch basketSelectionPageSearch,
-            IProcessingRestClient processingClient,
-            SuborderSizeCounter suborderSizeCounter,
-            IOrderDataFileService orderDataFileService,
-            IOrderDataFileRepository orderDataFileRepository,
-            IOrderJobService orderJobService,
-            IJobInfoService jobInfoService
-    ) {
+    public OrderProcessingService(BasketSelectionPageSearch basketSelectionPageSearch,
+                                  IProcessingRestClient processingClient,
+                                  SuborderSizeCounter suborderSizeCounter,
+                                  IOrderDataFileService orderDataFileService,
+                                  IOrderDataFileRepository orderDataFileRepository,
+                                  IOrderJobService orderJobService,
+                                  IJobInfoService jobInfoService) {
         this.basketSelectionPageSearch = basketSelectionPageSearch;
         this.processingClient = processingClient;
         this.suborderSizeCounter = suborderSizeCounter;
@@ -128,15 +123,13 @@ public class OrderProcessingService implements IOrderProcessingService {
     }
 
     @Override
-    public OrderCounts manageProcessedDatasetSelection(
-            Order order,
-            BasketDatasetSelection dsSel,
-            String tenant,
-            String user,
-            String userRole,
-            OrderCounts orderCounts,
-            int subOrderDuration
-    ) throws ModuleException {
+    public OrderCounts manageProcessedDatasetSelection(Order order,
+                                                       BasketDatasetSelection dsSel,
+                                                       String tenant,
+                                                       String user,
+                                                       String userRole,
+                                                       OrderCounts orderCounts,
+                                                       int subOrderDuration) throws ModuleException {
 
         ProcessDatasetDescription processDatasetDesc = dsSel.getProcessDatasetDescription();
         UUID processBusinessId = processDatasetDesc.getProcessBusinessId();
@@ -148,26 +141,40 @@ public class OrderProcessingService implements IOrderProcessingService {
                 PProcessDTO processDto = response.getBody();
                 OrderProcessInfo orderProcessInfo = parseOrderProcessInfo(order, dsSel, user, processDto);
                 List<DataType> requiredDatatypes = orderProcessInfo.getRequiredDatatypes();
-                
+
                 // Creates datasetTasks with required data types and update estimated size
                 DatasetTask dsTask = DatasetTask.fromBasketSelection(dsSel, requiredDatatypes.toJavaList());
-                dsTask.setFilesSize(orderProcessInfo.getSizeForecast().expectedResultSizeInBytes(dsTask.getFilesSize()));
+                dsTask.setFilesSize(orderProcessInfo.getSizeForecast()
+                                                    .expectedResultSizeInBytes(dsTask.getFilesSize()));
 
                 AtomicLong suborderCount = new AtomicLong(1);
                 OrderCounts result = basketSelectionPageSearch.fluxSearchDataObjects(dsSel)
-                        .groupBy(feature -> hasAtLeastOneRequiredFileInStorage(feature, requiredDatatypes))
-                        .doOnError(CatalogSearchException.class, error -> Mono.error(new ModuleException(error)))
-                        .flatMap(featureGroup -> discriminateBetweenSomeInStorageOrOnlyExternal(
-                                        order, dsSel,
-                                        tenant, user, userRole,
-                                        processDto, orderProcessInfo,
-                                        suborderCount, featureGroup,
-                                        subOrderDuration
-                                ))
-                        .doOnNext(dsTask::addReliantTask)
-                        .map(filesTask -> new OrderCounts(0, filesTask.getFiles().size(), 1, Collections.singleton(filesTask.getJobInfo().getId())))
-                        .reduce(OrderCounts.initial(), OrderCounts::add)
-                        .block();
+                                                              .groupBy(feature -> hasAtLeastOneRequiredFileInStorage(
+                                                                  feature,
+                                                                  requiredDatatypes))
+                                                              .doOnError(CatalogSearchException.class,
+                                                                         error -> Mono.error(new ModuleException(error)))
+                                                              .flatMap(featureGroup -> discriminateBetweenSomeInStorageOrOnlyExternal(
+                                                                  order,
+                                                                  dsSel,
+                                                                  tenant,
+                                                                  user,
+                                                                  userRole,
+                                                                  processDto,
+                                                                  orderProcessInfo,
+                                                                  suborderCount,
+                                                                  featureGroup,
+                                                                  subOrderDuration))
+                                                              .doOnNext(dsTask::addReliantTask)
+                                                              .map(filesTask -> new OrderCounts(0,
+                                                                                                filesTask.getFiles()
+                                                                                                         .size(),
+                                                                                                1,
+                                                                                                Collections.singleton(
+                                                                                                    filesTask.getJobInfo()
+                                                                                                             .getId())))
+                                                              .reduce(OrderCounts.initial(), OrderCounts::add)
+                                                              .block();
 
                 if (!dsTask.getReliantTasks().isEmpty()) {
                     order.addDatasetOrderTask(dsTask);
@@ -178,46 +185,63 @@ public class OrderProcessingService implements IOrderProcessingService {
             }
 
         } catch (HttpClientErrorException | HttpServerErrorException e) {
-            LOGGER.error(e.getMessage(),e);
+            LOGGER.error(e.getMessage(), e);
             throw new ModuleException(e.getMessage());
         } catch (RuntimeException e) {
             // catch a runtime exception if fluxSearchDataObjects throws a module exception wrapped in a runtime
             // reactor exception
-            if(e.getCause() instanceof TooManyItemsSelectedInBasketException) {
-                throw (TooManyItemsSelectedInBasketException) e.getCause();
+            if (e.getCause() instanceof TooManyItemsSelectedInBasketException exceptionCause) {
+                throw exceptionCause;
             } else {
                 throw e;
             }
         }
     }
 
-    private OrderProcessInfo parseOrderProcessInfo(Order order, BasketDatasetSelection dsSel, String user, PProcessDTO processDto) {
+    private OrderProcessInfo parseOrderProcessInfo(Order order,
+                                                   BasketDatasetSelection dsSel,
+                                                   String user,
+                                                   PProcessDTO processDto) {
         return processInfoMapper.fromMap(processDto.getProcessInfo())
-                .getOrElseThrow(() -> new UnparsableProcessInfoException(
-                        String.format("Unparsable process infos: order=%s user=%s dsSel=%s processDto=%s",
-                                order.getLabel(), user, dsSel.getId(), processDto)));
+                                .getOrElseThrow(() -> new UnparsableProcessInfoException(String.format(
+                                    "Unparsable process infos: order=%s user=%s dsSel=%s processDto=%s",
+                                    order.getLabel(),
+                                    user,
+                                    dsSel.getId(),
+                                    processDto)));
     }
 
-    private Publisher<? extends FilesTask> discriminateBetweenSomeInStorageOrOnlyExternal(
-            Order order, BasketDatasetSelection dsSel,
-            String tenant, String user, String userRole,
-            PProcessDTO processDto, OrderProcessInfo orderProcessInfo,
-            AtomicLong suborderCount, GroupedFlux<Boolean, EntityFeature> featureGroup,
-            int subOrderDuration
-    ) {
+    private Publisher<? extends FilesTask> discriminateBetweenSomeInStorageOrOnlyExternal(Order order,
+                                                                                          BasketDatasetSelection dsSel,
+                                                                                          String tenant,
+                                                                                          String user,
+                                                                                          String userRole,
+                                                                                          PProcessDTO processDto,
+                                                                                          OrderProcessInfo orderProcessInfo,
+                                                                                          AtomicLong suborderCount,
+                                                                                          GroupedFlux<Boolean, EntityFeature> featureGroup,
+                                                                                          int subOrderDuration) {
         if (hasRequiredFilesInStorage(featureGroup)) {
-            return manageFeaturesWithFilesInStorage(
-                    featureGroup, order, suborderCount,
-                    processDto, orderProcessInfo, dsSel,
-                    tenant, user, userRole, subOrderDuration
-            );
-        }
-        else {
-            return manageFeaturesWithOnlyExternalFiles(
-                featureGroup, order, suborderCount,
-                processDto, orderProcessInfo, dsSel,
-                tenant, user, userRole
-            );
+            return manageFeaturesWithFilesInStorage(featureGroup,
+                                                    order,
+                                                    suborderCount,
+                                                    processDto,
+                                                    orderProcessInfo,
+                                                    dsSel,
+                                                    tenant,
+                                                    user,
+                                                    userRole,
+                                                    subOrderDuration);
+        } else {
+            return manageFeaturesWithOnlyExternalFiles(featureGroup,
+                                                       order,
+                                                       suborderCount,
+                                                       processDto,
+                                                       orderProcessInfo,
+                                                       dsSel,
+                                                       tenant,
+                                                       user,
+                                                       userRole);
         }
     }
 
@@ -231,49 +255,62 @@ public class OrderProcessingService implements IOrderProcessingService {
         orderJobService.manageUserOrderStorageFilesJobInfos(user);
     }
 
-    protected Publisher<FilesTask> manageFeaturesWithOnlyExternalFiles(
-            GroupedFlux<Boolean, EntityFeature> featureGroup,
-            Order order,
-            AtomicLong suborderCount,
-            PProcessDTO pProcessDTO,
-            OrderProcessInfo orderProcessInfo,
-            BasketDatasetSelection dsSel,
-            String tenant,
-            String user,
-            String userRole
-    ) {
-        return windowAccordingToScopeAndSizeLimit(order.getId(), pProcessDTO.getProcessId(), featureGroup, orderProcessInfo)
-            .flatMap(features -> {
-                if (orderProcessInfo.getScope() == Scope.SUBORDER) {
-                    return createProcessExecutionJobAndFilesTask(
-                        order, suborderCount, pProcessDTO, orderProcessInfo, dsSel,
-                        tenant, user, userRole, features
-                    );
-                } else {
-                    return Flux.fromIterable(features)
-                        .flatMap(feature -> createProcessExecutionJobAndFilesTask(
-                            order, suborderCount, pProcessDTO, orderProcessInfo, dsSel,
-                            tenant, user, userRole, List.of(feature))
-                        );
-                }
-            });
+    protected Publisher<FilesTask> manageFeaturesWithOnlyExternalFiles(GroupedFlux<Boolean, EntityFeature> featureGroup,
+                                                                       Order order,
+                                                                       AtomicLong suborderCount,
+                                                                       PProcessDTO pProcessDTO,
+                                                                       OrderProcessInfo orderProcessInfo,
+                                                                       BasketDatasetSelection dsSel,
+                                                                       String tenant,
+                                                                       String user,
+                                                                       String userRole) {
+        return windowAccordingToScopeAndSizeLimit(order.getId(),
+                                                  pProcessDTO.getProcessId(),
+                                                  featureGroup,
+                                                  orderProcessInfo).flatMap(features -> {
+            if (orderProcessInfo.getScope() == Scope.SUBORDER) {
+                return createProcessExecutionJobAndFilesTask(order,
+                                                             suborderCount,
+                                                             pProcessDTO,
+                                                             orderProcessInfo,
+                                                             dsSel,
+                                                             tenant,
+                                                             user,
+                                                             userRole,
+                                                             features);
+            } else {
+                return Flux.fromIterable(features)
+                           .flatMap(feature -> createProcessExecutionJobAndFilesTask(order,
+                                                                                     suborderCount,
+                                                                                     pProcessDTO,
+                                                                                     orderProcessInfo,
+                                                                                     dsSel,
+                                                                                     tenant,
+                                                                                     user,
+                                                                                     userRole,
+                                                                                     List.of(feature)));
+            }
+        });
     }
 
-    protected Publisher<FilesTask> createProcessExecutionJobAndFilesTask(
-            Order order,
-            AtomicLong suborderCount,
-            PProcessDTO pProcessDTO,
-            OrderProcessInfo orderProcessInfo,
-            BasketDatasetSelection dsSel,
-            String tenant,
-            String user,
-            String userRole,
-            List<EntityFeature> features
-    ) {
-        JobInfo jobInfo = createProcessExecutionJobForFeatures(
-            order, suborderCount, pProcessDTO, orderProcessInfo, dsSel,
-            tenant, user, userRole, features
-        );
+    protected Publisher<FilesTask> createProcessExecutionJobAndFilesTask(Order order,
+                                                                         AtomicLong suborderCount,
+                                                                         PProcessDTO pProcessDTO,
+                                                                         OrderProcessInfo orderProcessInfo,
+                                                                         BasketDatasetSelection dsSel,
+                                                                         String tenant,
+                                                                         String user,
+                                                                         String userRole,
+                                                                         List<EntityFeature> features) {
+        JobInfo jobInfo = createProcessExecutionJobForFeatures(order,
+                                                               suborderCount,
+                                                               pProcessDTO,
+                                                               orderProcessInfo,
+                                                               dsSel,
+                                                               tenant,
+                                                               user,
+                                                               userRole,
+                                                               features);
         jobInfoService.createAsQueued(jobInfo);
         OrderDataFile[] outputFiles = extractOutputFilesFromProcessExecJob(jobInfo);
 
@@ -285,58 +322,47 @@ public class OrderProcessingService implements IOrderProcessingService {
         return Mono.just(filesTask);
     }
 
-    protected JobInfo createProcessExecutionJobForFeatures(
-            Order order,
-            AtomicLong suborderCount,
-            PProcessDTO pProcessDTO,
-            OrderProcessInfo orderProcessInfo,
-            BasketDatasetSelection dsSel,
-            String tenant,
-            String user,
-            String userRole,
-            List<EntityFeature> features
-    ) {
-        ProcessInputsPerFeature processInputsPerFeature = createInputFiles(
-                features,
-                orderProcessInfo.getRequiredDatatypes()
-        );
+    protected JobInfo createProcessExecutionJobForFeatures(Order order,
+                                                           AtomicLong suborderCount,
+                                                           PProcessDTO pProcessDTO,
+                                                           OrderProcessInfo orderProcessInfo,
+                                                           BasketDatasetSelection dsSel,
+                                                           String tenant,
+                                                           String user,
+                                                           String userRole,
+                                                           List<EntityFeature> features) {
+        ProcessInputsPerFeature processInputsPerFeature = createInputFiles(features,
+                                                                           orderProcessInfo.getRequiredDatatypes());
         Long suborderCountId = suborderCount.getAndIncrement();
 
-        BatchSuborderCorrelationIdentifier batchSuborderIdentifier = new BatchSuborderCorrelationIdentifier(
-                order.getId(), dsSel.getId(), suborderCountId
-        );
-        Long[] outputFiles = createOutputFilesAndReturnIds(
-                batchSuborderIdentifier,
-                UniformResourceName.fromString(dsSel.getDatasetIpid()),
-                features,
-                orderProcessInfo
-        );
-        JobInfo result = new JobInfo(
-                false,
-                orderJobService.computePriority(user, userRole),
-                HashSet.of(
-                    new TenantJobParameter(tenant),
-                    new UserJobParameter(user),
-                    new UserRoleJobParameter(userRole),
-                    new ProcessInputsPerFeatureJobParameter(processInputsPerFeature),
-                    new ProcessOutputFilesJobParameter(outputFiles),
-                    new ProcessDTOJobParameter(pProcessDTO),
-                    new ProcessBatchCorrelationIdJobParameter(batchSuborderIdentifier.repr()),
-                    new BasketDatasetSelectionJobParameter(new BasketDatasetSelectionDescriptor(dsSel))
-                ).toJavaSet(),
-                user,
-                ProcessExecutionJob.class.getName()
-        );
+        BatchSuborderCorrelationIdentifier batchSuborderIdentifier = new BatchSuborderCorrelationIdentifier(order.getId(),
+                                                                                                            dsSel.getId(),
+                                                                                                            suborderCountId);
+        Long[] outputFiles = createOutputFilesAndReturnIds(batchSuborderIdentifier,
+                                                           UniformResourceName.fromString(dsSel.getDatasetIpid()),
+                                                           features,
+                                                           orderProcessInfo);
+        JobInfo result = new JobInfo(false,
+                                     orderJobService.computePriority(user, userRole),
+                                     HashSet.of(new TenantJobParameter(tenant),
+                                                new UserJobParameter(user),
+                                                new UserRoleJobParameter(userRole),
+                                                new ProcessInputsPerFeatureJobParameter(processInputsPerFeature),
+                                                new ProcessOutputFilesJobParameter(outputFiles),
+                                                new ProcessDTOJobParameter(pProcessDTO),
+                                                new ProcessBatchCorrelationIdJobParameter(batchSuborderIdentifier.repr()),
+                                                new BasketDatasetSelectionJobParameter(new BasketDatasetSelectionDescriptor(
+                                                    dsSel))).toJavaSet(),
+                                     user,
+                                     ProcessExecutionJob.class.getName());
         result.setExpirationDate(order.getExpirationDate());
         return result;
     }
 
-    protected Long[] createOutputFilesAndReturnIds(
-            BatchSuborderCorrelationIdentifier batchSuborderIdentifier,
-            UniformResourceName dsSelIpId,
-            List<EntityFeature> features,
-            OrderProcessInfo processInfo
-    ) {
+    protected Long[] createOutputFilesAndReturnIds(BatchSuborderCorrelationIdentifier batchSuborderIdentifier,
+                                                   UniformResourceName dsSelIpId,
+                                                   List<EntityFeature> features,
+                                                   OrderProcessInfo processInfo) {
         Scope scope = processInfo.getScope();
         Cardinality cardinality = processInfo.getCardinality();
         List<DataType> requiredDataTypes = processInfo.getRequiredDatatypes();
@@ -345,77 +371,66 @@ public class OrderProcessingService implements IOrderProcessingService {
 
         if (scope == Scope.SUBORDER && cardinality == Cardinality.ONE_PER_EXECUTION) {
             List<DataFile> applicableDataFilesIn = features.flatMap(f -> List.ofAll(f.getFiles().values()))
-                    .filter(f -> requiredDataTypes.contains(f.getDataType()));
+                                                           .filter(f -> requiredDataTypes.contains(f.getDataType()));
 
-            long expectedSize = sizeForecast.expectedResultSizeInBytes(
-                applicableDataFilesIn.map(DataFile::getFilesize)
-                    .reduceOption(Long::sum)
-                    .getOrElse(0L)
-            );
+            long expectedSize = sizeForecast.expectedResultSizeInBytes(applicableDataFilesIn.map(DataFile::getFilesize)
+                                                                                            .reduceOption(Long::sum)
+                                                                                            .getOrElse(0L));
 
-            DataFile dataFileOut = DataFile.build(
-                    DataType.OTHER,
-                    batchSuborderIdentifier.repr(),
-                    ProcessInputCorrelationIdentifier.repr(batchSuborderIdentifier),
-                    MimeType.valueOf(OCTET_STREAM),
-                    true,
-                    true
-            );
+            DataFile dataFileOut = DataFile.build(DataType.OTHER,
+                                                  batchSuborderIdentifier.repr(),
+                                                  ProcessInputCorrelationIdentifier.repr(batchSuborderIdentifier),
+                                                  MimeType.valueOf(OCTET_STREAM),
+                                                  true,
+                                                  true);
             dataFileOut.setChecksum(UUID.randomUUID().toString());
             // ^- This is ugly but needed to prevent FilesTask to ignore files because they would have the same checksum
             dataFileOut.setFilesize(expectedSize);
             return List.of(createAndSaveOrderDataFile(dataFileOut, dsSelIpId, orderId))
-                    .map(OrderDataFile::getId)
-                    .toJavaArray(Long[]::new);
+                       .map(OrderDataFile::getId)
+                       .toJavaArray(Long[]::new);
         } else {
             return features.flatMap(feature -> {
                 if (cardinality == Cardinality.ONE_PER_EXECUTION || cardinality == Cardinality.ONE_PER_FEATURE) {
                     List<DataFile> applicableDataFilesIn = List.ofAll(feature.getFiles().values())
-                            .filter(f -> requiredDataTypes.contains(f.getDataType()));
-                    long expectedSize = sizeForecast.expectedResultSizeInBytes(
-                        applicableDataFilesIn
-                            .map(DataFile::getFilesize)
-                            .reduceOption(Long::sum)
-                            .getOrElse(0L)
-                    );
-                    DataFile dataFileOut = DataFile.build(
-                            DataType.OTHER,
-                            feature.getId().toString(),
-                            ProcessInputCorrelationIdentifier.repr(batchSuborderIdentifier, feature),
-                            MimeType.valueOf(OCTET_STREAM),
-                            true,
-                            true
-                    );
+                                                               .filter(f -> requiredDataTypes.contains(f.getDataType()));
+                    long expectedSize = sizeForecast.expectedResultSizeInBytes(applicableDataFilesIn.map(DataFile::getFilesize)
+                                                                                                    .reduceOption(Long::sum)
+                                                                                                    .getOrElse(0L));
+                    DataFile dataFileOut = DataFile.build(DataType.OTHER,
+                                                          feature.getId().toString(),
+                                                          ProcessInputCorrelationIdentifier.repr(batchSuborderIdentifier,
+                                                                                                 feature),
+                                                          MimeType.valueOf(OCTET_STREAM),
+                                                          true,
+                                                          true);
                     dataFileOut.setChecksum(UUID.randomUUID().toString());
                     // ^- This is ugly but needed to prevent FilesTask to ignore files because they would have the same checksum
                     dataFileOut.setFilesize(expectedSize);
                     return List.of(createAndSaveOrderDataFile(dataFileOut, feature.getId(), orderId));
                 } else if (cardinality == Cardinality.ONE_PER_INPUT_FILE) {
-                    return featureRequiredDatafiles(feature, requiredDataTypes)
-                        .map(dataFile -> {
-                            long expectedSize = sizeForecast.expectedResultSizeInBytes(dataFile.getFilesize());
+                    return featureRequiredDatafiles(feature, requiredDataTypes).map(dataFile -> {
+                        long expectedSize = sizeForecast.expectedResultSizeInBytes(dataFile.getFilesize());
 
-                            DataFile dataFileOut = DataFile.build(
-                                DataType.OTHER,
-                                dataFile.getFilename(),
-                                ProcessInputCorrelationIdentifier.repr(batchSuborderIdentifier, feature, dataFile),
-                                MimeType.valueOf(OCTET_STREAM),
-                                true,
-                                true
-                            );
-                            dataFileOut.setChecksum(UUID.randomUUID().toString());
-                            // ^- This is ugly but needed to prevent FilesTask to ignore files because they would have the same checksum
-                            dataFileOut.setFilesize(expectedSize);
-                            return createAndSaveOrderDataFile(dataFileOut, feature.getId(), orderId);
-                        })
-                        .collect(Collectors.toList());
+                        DataFile dataFileOut = DataFile.build(DataType.OTHER,
+                                                              dataFile.getFilename(),
+                                                              ProcessInputCorrelationIdentifier.repr(
+                                                                  batchSuborderIdentifier,
+                                                                  feature,
+                                                                  dataFile),
+                                                              MimeType.valueOf(OCTET_STREAM),
+                                                              true,
+                                                              true);
+                        dataFileOut.setChecksum(UUID.randomUUID().toString());
+                        // ^- This is ugly but needed to prevent FilesTask to ignore files because they would have the same checksum
+                        dataFileOut.setFilesize(expectedSize);
+                        return createAndSaveOrderDataFile(dataFileOut, feature.getId(), orderId);
+                    }).toList();
                 } else {
                     // Happens only if some new cases appear for Cardinality
                     throw new NotImplementedException("New Cardinality case missing");
                 }
-            })
-            .map(OrderDataFile::getId)
-            .toJavaArray(Long[]::new);
+            }).map(OrderDataFile::getId).toJavaArray(Long[]::new);
         }
     }
 
@@ -433,88 +448,66 @@ public class OrderProcessingService implements IOrderProcessingService {
      * @return the ProcessInputsPerFeature listing input files per feature
      */
     protected ProcessInputsPerFeature createInputFiles(List<EntityFeature> features, List<DataType> requiredDataTypes) {
-        return new ProcessInputsPerFeature(features
-            .toMap(ProcessOutputFeatureDesc::from, feature ->
-                featureRequiredDatafiles(feature, requiredDataTypes)
-                    .map(dataFile -> new OrderDataFile(dataFile, feature.getId(), -1L))
-                    .collect(Collectors.toList()))
-            .toJavaMap());
+        return new ProcessInputsPerFeature(features.toMap(ProcessOutputFeatureDesc::from,
+                                                          feature -> featureRequiredDatafiles(feature,
+                                                                                              requiredDataTypes).map(
+                                                              dataFile -> new OrderDataFile(dataFile,
+                                                                                            feature.getId(),
+                                                                                            -1L)).toList())
+                                                   .toJavaMap());
     }
 
     protected Stream<DataFile> featureRequiredDatafiles(EntityFeature feature, List<DataType> requiredTypes) {
-        return feature.getFiles().values().stream()
-                .filter(file -> requiredTypes.contains(file.getDataType()));
+        return feature.getFiles().values().stream().filter(file -> requiredTypes.contains(file.getDataType()));
     }
 
-    protected Flux<List<EntityFeature>> windowAccordingToScopeAndSizeLimit(
-            Long orderId,
-            UUID processBusinessId,
-            GroupedFlux<Boolean, EntityFeature> featureGroup,
-            OrderProcessInfo orderProcessInfo
-    ) {
-        Flux<List<Tuple2<EntityFeature, FeatureAccumulator>>> publish = featureGroup
-                .publish(fg -> fg.zipWith(fg.scan(
-                                new FeatureAccumulator(orderId, processBusinessId),
-                                (acc, f) -> acc.addFeatureAndReturnInitialAccumulatorIfOverLimits(f, orderProcessInfo)))
-                        .bufferUntil(featAndAcc -> featAndAcc.getT2().isInitial(), true)
-                        .map(List::ofAll));
+    protected Flux<List<EntityFeature>> windowAccordingToScopeAndSizeLimit(Long orderId,
+                                                                           UUID processBusinessId,
+                                                                           GroupedFlux<Boolean, EntityFeature> featureGroup,
+                                                                           OrderProcessInfo orderProcessInfo) {
+        Flux<List<Tuple2<EntityFeature, FeatureAccumulator>>> publish = featureGroup.publish(fg -> fg.zipWith(fg.scan(
+                                                                                                         new FeatureAccumulator(orderId, processBusinessId),
+                                                                                                         (acc, f) -> acc.addFeatureAndReturnInitialAccumulatorIfOverLimits(f, orderProcessInfo)))
+                                                                                                     .bufferUntil(
+                                                                                                         featAndAcc -> featAndAcc.getT2()
+                                                                                                                                 .isInitial(),
+                                                                                                         true)
+                                                                                                     .map(List::ofAll));
 
         // Check if the order can be split in multiple suborders
-        if(!orderProcessInfo.getForbidSplitInSuborders()) {
+        if (Boolean.FALSE.equals(orderProcessInfo.getForbidSplitInSuborders())) {
             return publish.map(featAndAcc -> featAndAcc.map(Tuple2::getT1));
         } else {
             // if not, check the size of the buffer. If it contains more than one featureGroup, it means one of the
-            // SizeLimit was reached, an exception is thrown because of the active parameter forbitSplitInSuborders
-            return publish
-                    .filter(featAndAcc -> !featAndAcc.isEmpty())
-                    .buffer(2)
-                    .flatMap(featuresBuffer -> {
-                        if (featuresBuffer.size() > 1) {
-                            return Mono.error(new TooManyItemsSelectedInBasketException(String.format(
-                                    "%s. The order cannot be processed because the parameter " +
-                                            "forbitSplitInSuborders is active. Please decrease the number of items " +
-                                            "ordered or contact the administrator for more information.",
-                                    featuresBuffer.get(1).last().getT2().newSubOrderMsg)));
-                        } else {
-                            return Mono.just(featuresBuffer.get(0).map(Tuple2::getT1));
-                        }
-                    });
+            // SizeLimit was reached, an exception is thrown because of the active parameter forbidSplitInSuborders
+            return publish.filter(featAndAcc -> !featAndAcc.isEmpty()).buffer(2).flatMap(featuresBuffer -> {
+                if (featuresBuffer.size() > 1) {
+                    return Mono.error(new TooManyItemsSelectedInBasketException(String.format(
+                        "%s. The order cannot be processed because the parameter "
+                        + "forbidSplitInSuborders is active. Please decrease the number of items "
+                        + "ordered or contact the administrator for more information.",
+                        featuresBuffer.get(1).last().getT2().newSubOrderMsg)));
+                } else {
+                    return Mono.just(featuresBuffer.get(0).map(Tuple2::getT1));
+                }
+            });
         }
     }
 
-    protected Flux<FilesTask> manageFeaturesWithFilesInStorage(
-            GroupedFlux<Boolean, EntityFeature> featureGroup,
-            Order order,
-            AtomicLong suborderCount,
-            PProcessDTO pProcessDTO,
-            OrderProcessInfo orderProcessInfo,
-            BasketDatasetSelection dsSel,
-            String tenant,
-            String user,
-            String userRole,
-            int subOrderDuration
-    ) {
-        return windowAccordingToScopeAndSizeLimit(order.getId(), pProcessDTO.getProcessId(), featureGroup, orderProcessInfo)
-            .flatMap(features -> createProcessJobAndStorageFilesJobForFeatures(
-                    order, suborderCount, pProcessDTO, orderProcessInfo, dsSel,
-                    tenant, user, userRole, features, subOrderDuration
-                     )
-            );
-    }
-
-    private Mono<FilesTask> createProcessJobAndStorageFilesJobForFeatures(
-            Order order,
-            AtomicLong suborderCount,
-            PProcessDTO pProcessDTO,
-            OrderProcessInfo orderProcessInfo,
-            BasketDatasetSelection dsSel,
-            String tenant,
-            String user,
-            String userRole,
-            List<EntityFeature> features,
-            int subOrderDuration
-    ) {
-        JobInfo processExecJobUnsaved = createProcessExecutionJobForFeatures(
+    protected Flux<FilesTask> manageFeaturesWithFilesInStorage(GroupedFlux<Boolean, EntityFeature> featureGroup,
+                                                               Order order,
+                                                               AtomicLong suborderCount,
+                                                               PProcessDTO pProcessDTO,
+                                                               OrderProcessInfo orderProcessInfo,
+                                                               BasketDatasetSelection dsSel,
+                                                               String tenant,
+                                                               String user,
+                                                               String userRole,
+                                                               int subOrderDuration) {
+        return windowAccordingToScopeAndSizeLimit(order.getId(),
+                                                  pProcessDTO.getProcessId(),
+                                                  featureGroup,
+                                                  orderProcessInfo).flatMap(features -> createProcessJobAndStorageFilesJobForFeatures(
             order,
             suborderCount,
             pProcessDTO,
@@ -523,24 +516,46 @@ public class OrderProcessingService implements IOrderProcessingService {
             tenant,
             user,
             userRole,
-            features
-        );
+            features,
+            subOrderDuration));
+    }
+
+    private Mono<FilesTask> createProcessJobAndStorageFilesJobForFeatures(Order order,
+                                                                          AtomicLong suborderCount,
+                                                                          PProcessDTO pProcessDTO,
+                                                                          OrderProcessInfo orderProcessInfo,
+                                                                          BasketDatasetSelection dsSel,
+                                                                          String tenant,
+                                                                          String user,
+                                                                          String userRole,
+                                                                          List<EntityFeature> features,
+                                                                          int subOrderDuration) {
+        JobInfo processExecJobUnsaved = createProcessExecutionJobForFeatures(order,
+                                                                             suborderCount,
+                                                                             pProcessDTO,
+                                                                             orderProcessInfo,
+                                                                             dsSel,
+                                                                             tenant,
+                                                                             user,
+                                                                             userRole,
+                                                                             features);
         processExecJobUnsaved.setExpirationDate(order.getExpirationDate());
         JobInfo processExecJob = jobInfoService.createAsPending(processExecJobUnsaved);
 
-        Long[] internalInputFiles = findInputFilesInStorage(order.getId(), features, orderProcessInfo.getRequiredDatatypes());
+        Long[] internalInputFiles = findInputFilesInStorage(order.getId(),
+                                                            features,
+                                                            orderProcessInfo.getRequiredDatatypes());
         JobInfo storageFilesJobUnsaved = new JobInfo(false,
-            orderJobService.computePriority(user, userRole),
-            HashSet.of(
-                    new FilesJobParameter(internalInputFiles),
-                    new SubOrderAvailabilityPeriodJobParameter(subOrderDuration),
-                    new UserJobParameter(user),
-                    new UserRoleJobParameter(userRole),
-                    new ProcessJobInfoJobParameter(processExecJob.getId())
-            ).toJavaSet(),
-            user,
-            StorageFilesJob.class.getName()
-        );
+                                                     orderJobService.computePriority(user, userRole),
+                                                     HashSet.of(new FilesJobParameter(internalInputFiles),
+                                                                new SubOrderAvailabilityPeriodJobParameter(
+                                                                    subOrderDuration),
+                                                                new UserJobParameter(user),
+                                                                new UserRoleJobParameter(userRole),
+                                                                new ProcessJobInfoJobParameter(processExecJob.getId()))
+                                                            .toJavaSet(),
+                                                     user,
+                                                     StorageFilesJob.class.getName());
         storageFilesJobUnsaved.setExpirationDate(order.getExpirationDate());
         JobInfo storageFilesJob = jobInfoService.createAsPending(storageFilesJobUnsaved);
 
@@ -555,24 +570,28 @@ public class OrderProcessingService implements IOrderProcessingService {
     }
 
     private OrderDataFile[] extractOutputFilesFromProcessExecJob(JobInfo processExecJob) {
-        List<Long> ids = List.of(processExecJob.getParametersAsMap().get(ProcessOutputFilesJobParameter.NAME).getValue());
+        List<Long> ids = List.of(processExecJob.getParametersAsMap()
+                                               .get(ProcessOutputFilesJobParameter.NAME)
+                                               .getValue());
         return List.ofAll(orderDataFileRepository.findAllById(ids)).toJavaArray(OrderDataFile[]::new);
     }
 
-    private Long[] findInputFilesInStorage(Long orderId, List<EntityFeature> features, List<DataType> requiredDatatypes) {
-        return features
-            .flatMap(f -> List.ofAll(f.getFiles().values())
-                .filter(file -> !file.isReference() && requiredDatatypes.contains(file.getDataType()))
-                .map(file -> new OrderDataFile(file, f.getId(), orderId))
-            ).distinct()
-            .map(orderDataFileRepository::save)
-            .map(OrderDataFile::getId)
-            .toJavaArray(Long[]::new);
+    private Long[] findInputFilesInStorage(Long orderId,
+                                           List<EntityFeature> features,
+                                           List<DataType> requiredDatatypes) {
+        return features.flatMap(f -> List.ofAll(f.getFiles().values())
+                                         .filter(file -> !file.isReference()
+                                                         && requiredDatatypes.contains(file.getDataType()))
+                                         .map(file -> new OrderDataFile(file, f.getId(), orderId)))
+                       .distinct()
+                       .map(orderDataFileRepository::save)
+                       .map(OrderDataFile::getId)
+                       .toJavaArray(Long[]::new);
     }
 
-    protected boolean hasAtLeastOneRequiredFileInStorage(EntityFeature entityFeature, List<DataType> requiredDatatypes) {
-        return featureRequiredDatafiles(entityFeature, requiredDatatypes)
-            .anyMatch(df -> !df.isReference());
+    protected boolean hasAtLeastOneRequiredFileInStorage(EntityFeature entityFeature,
+                                                         List<DataType> requiredDatatypes) {
+        return featureRequiredDatafiles(entityFeature, requiredDatatypes).anyMatch(df -> !df.isReference());
     }
 
     protected boolean hasRequiredFilesInStorage(GroupedFlux<Boolean, EntityFeature> featureGroup) {
@@ -581,6 +600,7 @@ public class OrderProcessingService implements IOrderProcessingService {
 
     @SuppressWarnings("serial")
     public static class UnparsableProcessInfoException extends RuntimeException {
+
         public UnparsableProcessInfoException(String message) {
             super(message);
         }
@@ -589,11 +609,17 @@ public class OrderProcessingService implements IOrderProcessingService {
     @lombok.Value
     @lombok.AllArgsConstructor
     class FeatureAccumulator {
+
         Long orderId;
+
         UUID processBusinessId;
+
         int fileCount;
+
         int featureCount;
+
         long size;
+
         String newSubOrderMsg;
 
         public FeatureAccumulator(Long orderId, UUID processBusinessId) {
@@ -616,21 +642,23 @@ public class OrderProcessingService implements IOrderProcessingService {
 
         public FeatureAccumulator addFeatureAndReturnInitialAccumulatorIfOverLimits(EntityFeature feature,
                                                                                     OrderProcessInfo orderProcessInfo) {
-            List<DataFile> files = featureRequiredDatafiles(feature, orderProcessInfo.getRequiredDatatypes()).collect(List.collector());
+            List<DataFile> files = featureRequiredDatafiles(feature, orderProcessInfo.getRequiredDatatypes()).collect(
+                List.collector());
             int deltaCount = files.size();
             long deltaSize = files.map(DataFile::getFilesize).sum().longValue();
-            FeatureAccumulator newAcc = new FeatureAccumulator(orderId, processBusinessId,
-                    fileCount + deltaCount,
-                    featureCount + 1,
-                    size + deltaSize, newSubOrderMsg
-            );
+            FeatureAccumulator newAcc = new FeatureAccumulator(orderId,
+                                                               processBusinessId,
+                                                               fileCount + deltaCount,
+                                                               featureCount + 1,
+                                                               size + deltaSize,
+                                                               newSubOrderMsg);
             Tuple2<Boolean, String> resultTuple = newAcc.isOverProcessAndStorageLimits(orderProcessInfo);
 
-             if(resultTuple.getT1()) {
-                 return new FeatureAccumulator(orderId, processBusinessId, resultTuple.getT2());
-             } else {
+            if (Boolean.TRUE.equals(resultTuple.getT1())) {
+                return new FeatureAccumulator(orderId, processBusinessId, resultTuple.getT2());
+            } else {
                 return newAcc;
-             }
+            }
         }
 
         public Tuple2<Boolean, String> isOverProcessAndStorageLimits(OrderProcessInfo orderProcessInfo) {
@@ -638,29 +666,39 @@ public class OrderProcessingService implements IOrderProcessingService {
             SizeLimit.Type processLimitType = sizeLimit.getType();
             boolean countExceedsMaxExternalBucketSize = fileCount >= suborderSizeCounter.maxExternalBucketSize();
             boolean sizeExceedsStorageBucketSize = size >= suborderSizeCounter.getStorageBucketSize();
-            boolean countExceedsProcessFilesLimit = processLimitType == SizeLimit.Type.FILES && sizeLimit.isExceededBy(fileCount);
-            boolean countExceedsProcessFeatureLimit = processLimitType == SizeLimit.Type.FEATURES && sizeLimit.isExceededBy(featureCount);
-            boolean sizeExceedsProcessBytesLimit = processLimitType == SizeLimit.Type.BYTES && sizeLimit.isExceededBy(size);
+            boolean countExceedsProcessFilesLimit = processLimitType == SizeLimit.Type.FILES && sizeLimit.isExceededBy(
+                fileCount);
+            boolean countExceedsProcessFeatureLimit = processLimitType == SizeLimit.Type.FEATURES
+                                                      && sizeLimit.isExceededBy(featureCount);
+            boolean sizeExceedsProcessBytesLimit = processLimitType == SizeLimit.Type.BYTES && sizeLimit.isExceededBy(
+                size);
 
             boolean result = countExceedsMaxExternalBucketSize || sizeExceedsStorageBucketSize;
             result |= countExceedsProcessFilesLimit || countExceedsProcessFeatureLimit || sizeExceedsProcessBytesLimit;
 
             String subOrderMsg = "";
             if (result) {
-                subOrderMsg = String.format("order=%s processUuid=%s Suborder interrupted because one of the " +
-                                "following limit was reached : " +
-                                " \"%s\" = %s," +
-                                " \"%s\" = %s," +
-                                " process info \"%s\" = %s," +
-                                " process info \"%s\" = %s," +
-                                " process info \"%s\" (size limit) = %s",
-                        orderId, processBusinessId,
-                        "MAX_EXTERNAL_BUCKET_FILE_COUNT", countExceedsMaxExternalBucketSize,
-                        "MAX_STORAGE_BUCKET_SIZE", sizeExceedsStorageBucketSize,
-                        SizeLimit.Type.FILES, countExceedsProcessFilesLimit,
-                        SizeLimit.Type.FEATURES, countExceedsProcessFeatureLimit,
-                        SizeLimit.Type.BYTES, sizeExceedsProcessBytesLimit
-                );
+                subOrderMsg = String.format("""
+                                                order=%s processUuid=%s Suborder interrupted because one of the \
+                                                following limit was reached : \
+                                                "%s" = %s, \
+                                                "%s" = %s, \
+                                                process info "%s" = %s, \
+                                                process info "%s" = %s, \
+                                                process info "%s" (size limit) = %s
+                                                """,
+                                            orderId,
+                                            processBusinessId,
+                                            "MAX_EXTERNAL_BUCKET_FILE_COUNT",
+                                            countExceedsMaxExternalBucketSize,
+                                            "MAX_STORAGE_BUCKET_SIZE",
+                                            sizeExceedsStorageBucketSize,
+                                            SizeLimit.Type.FILES,
+                                            countExceedsProcessFilesLimit,
+                                            SizeLimit.Type.FEATURES,
+                                            countExceedsProcessFeatureLimit,
+                                            SizeLimit.Type.BYTES,
+                                            sizeExceedsProcessBytesLimit);
                 LOGGER.info(subOrderMsg);
             }
             return Tuples.of(result, subOrderMsg);
@@ -671,5 +709,4 @@ public class OrderProcessingService implements IOrderProcessingService {
         }
     }
 
-    // @formatter:on
 }
